# algorithms

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux-eic-shell.yml
JugBase/: CMakeLists.txt
JugBase/Jug/: Algorithm.h  Particle.h  Property.h  Service.h
JugBase/JugAlg/: Transformer.h
JugBase/JugBase/: Algorithm.h  IParticleSvc.h  Particle.h  Property.h  Service.h
JugBase/JugKernel/: PhysicalConstants.h
JugBase/src/components/: Algorithm.cpp  EICDataSvc.cpp  GeoSvc.cpp  GeoSvc.h  InputCopier.cpp  ParticleSvc.cpp  ParticleSvc.h  PodioInput.cpp  PodioInput.h  PodioOutput.cpp  PodioOutput.h  ReadTestConsumer.cxx
JugDigi/: CMakeLists.txt
JugDigi/JugDigi/: CalorimeterBirksCorr.h  CalorimeterHitDigi.h
JugDigi/src/components/: CalorimeterBirksCorr.cpp  CalorimeterHitDigi.cpp  PhotoMultiplierDigi.cpp  SiliconTrackerDigi.cpp  SimTrackerHitsCollector.cpp
JugFast/: CMakeLists.txt
JugFast/src/components/: ClusterMerger.cpp  InclusiveKinematicsTruth.cpp  MC2SmearedParticle.cpp  MatchClusters.cpp  ParticlesWithTruthPID.cpp  SmearedFarForwardParticles.cpp  TruthClustering.cpp  TruthEnergyPositionClusterMerger.cpp
JugPID/: CMakeLists.txt
JugPID/src/components/: PhotoRingClusters.cpp
JugReco/: CMakeLists.txt
JugReco/src/components/: CalorimeterHitReco.cpp  CalorimeterHitsEtaPhiProjector.cpp  CalorimeterHitsMerger.cpp  CalorimeterIslandCluster.cpp  ClusterRecoCoG.cpp  EnergyPositionClusterMerger.cpp  FarForwardParticles.cpp  FarForwardParticlesOMD.cpp  ImagingClusterReco.cpp  ImagingPixelDataCombiner.cpp  ImagingPixelDataSorter.cpp  ImagingPixelMerger.cpp  ImagingPixelReco.cpp  ImagingTopoCluster.cpp  InclusiveKinematicsDA.cpp  InclusiveKinematicsElectron.cpp  InclusiveKinematicsJB.cpp  InclusiveKinematicsSigma.cpp  InclusiveKinematicseSigma.cpp  ParticleCollector.cpp  PhotoMultiplierReco.cpp  SimpleClustering.cpp  TrackerHitReconstruction.cpp  TrackingHitsCollector.cpp  TrackingHitsCollector2.cpp
JugTrack/: CMakeLists.txt
JugTrack/src/components/: CKFTracking.cpp  CKFTracking.h  ConformalXYPeakProtoTracks.cpp  FinderAlgoTemplate.cpp  GenFitTrackFitter.cpp  GenFitTrackFitter.h  HoughTransformProtoTracks.cpp  ParticlesFromTrackFit.cpp  ProtoTrackMatching.cpp  SingleTrackSourceLinker.cpp  TestACTSLogger.cpp  TestACTSLogger.h  TrackFindingAlgorithm.cpp  TrackFindingAlgorithm.h  TrackFittingAlgorithm.cpp  TrackFittingAlgorithm.h  TrackParamACTSSeeding.cpp  TrackParamClusterInit.cpp  TrackParamImagingClusterInit.cpp  TrackParamTruthInit.cpp  TrackParamVertexClusterInit.cpp  TrackProjector.cpp  TrackerSourceLinker.cpp  TruthTrackSeeding.cpp
acts/: CMakeLists.txt
acts/src/: TrackProjector.cpp
calorimetry/: CMakeLists.txt
calorimetry/src/: ClusterRecoCoG.cpp
cmake/: algorithmsComponentsHelpers.cmake  algorithmsConfig.cmake.in  algorithmsCreatePackageConfig.cmake  algorithmsRetrieveVersion.cmake
core/: CMakeLists.txt
core/include/algorithms/: geo.h  logger.h  random.h  service.h
core/src/: geo.cpp
dis/: CMakeLists.txt
far_forward/: CMakeLists.txt
far_forward/include/algorithms/far_forward/todo/: FarForwardParticlesOMD.h
far_forward/src/todo/: FarForwardParticles.cpp
pid/: CMakeLists.txt
tracking/: CMakeLists.txt
truth/: CMakeLists.txt
truth/include/algorithms/truth/todo/: InclusiveKinematicsTruth.h  MatchClusters.h  SmearedFarForwardParticles.h
utility/: CMakeLists.txt
